<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trin.nilmobile.InitialActivity" >

    <TextView
        android:id="@+id/txtCampus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campusSpinner"
        android:layout_alignParentTop="true"
        android:text="@string/campus_lbl" />

    <Spinner
        android:id="@+id/campusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCampus1"
        android:layout_marginTop="21dp"
        android:entries="@array/campus_array"
        android:gravity="center_vertical"
        android:prompt="@string/campus_prompt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/occupationSpinner"
        android:layout_below="@+id/campusSpinner"
        android:layout_marginTop="40dp"
        android:text="@string/pos_lbl" />

    <Spinner
        android:id="@+id/occupationSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="21dp"
        android:entries="@array/occupation_array"
        android:gravity="center_vertical"
        android:prompt="@string/occupation_prompt" />

    <TextView
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/next"
        android:gravity="center_vertical"
        android:text="@string/next" />

</RelativeLayout>