<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:id="@+id/txtCampus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campusSpinner"
        android:layout_alignParentTop="true"
       
        android:text="@string/campus_lbl" />

    <Spinner
        android:id="@+id/campusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCampus1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:entries="@array/campus_array"
        android:gravity="center_vertical"
        android:prompt="@string/campus_prompt" />

    <TextView
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/next"
        android:gravity="center_vertical"
        android:text="@string/next" />

</RelativeLayout>
